# Omoji

./: README.md
ai-model/: README.md  main.py  pyproject.toml
chrome-extension/: package-lock.json  package.json  pnpm-lock.yaml
chrome-extension/chrome-extension/: manifest.js
chrome-extension/chrome-extension/src/background/: index.ts
chrome-extension/pages/popup/src/: Popup.css  Popup.tsx  index.css
